Closed
Bug 418126
Opened 18 years ago
Closed 18 years ago
Add runtime requirement support for Linux (show alert when gtk is too old)
Categories
(Toolkit :: Startup and Profile System, defect)
Tracking
()
RESOLVED
FIXED
mozilla1.9beta4
People
(Reporter: reed, Assigned: ventnor.bugzilla)
References
()
Details
Attachments
(1 file, 1 obsolete file)
|
2.28 KB,
patch
|
Details | Diff | Splinter Review |
We need a way to inform users who try the Linux binaries for Firefox 3 that GTK+ versions below 2.10 aren't supported instead of just crashing on the user. The same may hold true for other changes in runtime requirements. This will require a new string be added, so late-l10n.
Flags: blocking1.9?
Comment 1•18 years ago
|
||
FWIW, Unless things have changed, mozilla.org isn't releasing binary versions of Firefox 3 final (which would make this WONTFIX unless you care about doing this for nightlies?). Mike Connor blogged about this a while ago. http://steelgryphon.com/blog/?p=96
| Assignee | ||
Comment 2•18 years ago
|
||
The logical place I can see to put a dialog like this is nsNativeAppSupportUnix.cpp, but I can't load the string service there so I can't get a localized string. Is there any other point in the program before we need a GTK 2.10 feature but after we've loaded XPCOM?
Comment 3•18 years ago
|
||
We should fix this. It looks like we're still going to ship our own builds, that proposal never really went far, unfortunately. We've still managed to improve a lot about Firefox on Linux, but that was largely based on volunteers and some of our devs, rather than the distros taking over maintenance and advancing the progress.
We should fix this bug, though I'm ok without a localized string...
Yes, we should definitely fix this -- even a simple dialog using core X stuff would be fine, even without a localized string. Maybe a URL inside it (unclickable) where we can provide localized information.
Flags: blocking1.9? → blocking1.9+
| Assignee | ||
Comment 5•18 years ago
|
||
At this point we can't get any XPCOM services so a translatable string is impossible, but I tried my best to make the overall message as easy to decipher as possible.
Assignee: nobody → ventnor.bugzilla
Status: NEW → ASSIGNED
Attachment #304375 -
Flags: review?(benjamin)
Updated•18 years ago
|
Attachment #304375 -
Flags: review?(benjamin) → review+
| Assignee | ||
Comment 6•18 years ago
|
||
Toolkit-only, no need for sr, and blocking, so no need for approval. Wonderful! :-)
Keywords: checkin-needed
Comment 7•18 years ago
|
||
Comment on attachment 304375 [details] [diff] [review]
Patch
>+#define MIN_GTK_MAJOR_VERSION 2
>+#define MIN_GTK_MINOR_VERSION 10
>+#define UNSUPPORTED_GTK_MSG "We're sorry, this application requires a version of the GTK library that is not installed on your computer.\n\n\
>+You have GTK %d.%d.\nThis application requires GTK %d.%d.\n\n\
>+Please upgrade your GTK library if you wish to use this application."
s/GTK/GTK+/g
And "This application requires ... or newer" please?
| Assignee | ||
Comment 8•18 years ago
|
||
Attachment #304375 -
Attachment is obsolete: true
| Reporter | ||
Updated•18 years ago
|
Component: Widget: Gtk → XRE Startup
Product: Core → Toolkit
QA Contact: gtk → xre.startup
| Reporter | ||
Comment 9•18 years ago
|
||
Checking in toolkit/xre/nsNativeAppSupportUnix.cpp;
/cvsroot/mozilla/toolkit/xre/nsNativeAppSupportUnix.cpp,v <-- nsNativeAppSupportUnix.cpp
new revision: 1.5; previous revision: 1.4
done
Comment 10•18 years ago
|
||
Out of curiosity, is there a particular reason why you didn't use gtk_check_version?
| Assignee | ||
Comment 11•18 years ago
|
||
IIRC, gtk_check_version didn't work as expected. I can't remember the exact reason though.
Updated•18 years ago
|
Summary: Add runtime requirement support for Linux → Add runtime requirement support for Linux (show alert when gtk is too old)
| Reporter | ||
Comment 12•18 years ago
|
||
This will become WONTFIX'd by bug 418885.
Component: XRE Startup → Startup and Profile System
QA Contact: xre.startup → startup
You need to log in
before you can comment on or make changes to this bug.
Description
•