Bug 418126 - "Add runtime requirement support for Linux" [p=ventnor.bugzilla@yahoo.com.au (Michael Ventnor) r=bsmedberg a=blocking1.9+]